--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,14 @@
 name = "raindropdick"
 version = "0.1.0"
 edition = "2018"
-
+license = " GPL-3.0-or-later"
+description = "a v2ray tui"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [workspace]
 members = ["widgets","spider"]
 [dependencies]
-cursive = { git = "https://github.com/gyscos/cursive" }
-#cursive = "0.15"
+#cursive = { git = "https://github.com/gyscos/cursive" }
+cursive = "0.17.0-alpha.0"
 futures = "0.3"
 base64 = "0.13.0"
 surf = "2.1.0"
