--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ futures = "0.3"
 base64 = "0.13.0"
 surf = "2.1.0"
 serde_json = "1.0"
+urlencoding = "2.1.0"
 [dependencies.async-std]
 version = "1.7.0"
 features = ["attributes"]
