--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "raindropdick"
 version = "0.3.5"
 edition = "2021"
+license = " GPL-3.0-or-later"
+description = "a v2ray tui"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
