--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ description = "a v2ray tui"
 [dependencies]
 tui = {version = "0.16.0",  features = ["crossterm"] }
 crossterm = "0.20"
-reqwest = { version = "0.11", default-features = false, features = ["blocking", "json","rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }
 base64 = "0.13.0"
 serde_json = "1.0"
 urlencoding = "2.1.0"
 unicode-width = "0.1"
+tokio = { version = "1", features = ["full"] }
+async-trait = "0.1.51"
