--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "raindropdick"
-version = "0.3.5"
+version = "0.4.0"
 edition = "2021"
 license = " GPL-3.0-or-later"
 description = "a v2ray tui"
-
+homepage = "https://github.com/ArchLinuxStudio/RaindropDick"
+authors = ["chen244 <aakari@tutanota.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
