--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ crossterm = "0.20"
 reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }
 base64 = "0.13.0"
 serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 urlencoding = "2.1.0"
 unicode-width = "0.1"
 tokio = { version = "1", features = ["full"] }
