--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,12 @@ edition = "2021"
 license = " GPL-3.0-or-later"
 description = "a v2ray tui"
 homepage = "https://github.com/ArchLinuxStudio/RaindropDick"
-authors = ["chen244 <aakari@tutanota.com>"]
+authors = ["Decodertalkers <aakari@tutanota.com>"]
 keywords = ["tui"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+v2raylinks = {path = "./v2raylinks"}
 tui = {version = "0.19.0",  features = ["crossterm"] }
 crossterm = "0.25.0"
 reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }
@@ -20,3 +21,5 @@ urlencoding = "2.1.2"
 unicode-width = "0.1"
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1.57"
+regex = "1"
+once_cell = "1.15.0"
